--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="orange">#FD5B32</color>
+    <color name="grey">#FFC6C6C6</color>
+    <color name="light_grey">#FFEEEEEE</color>
+    <color name="green">#FF58D58F</color>
+    <color name="light_orange">#FFFFBD68</color>
+    <color name="yellow">#FFF6C354</color>
+    <color name="blue">#FF3F7EFD</color>
+    <color name="red">#FFF77469</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
