--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.Moru" parent="Theme.MaterialComponents.Light">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/orange</item>
-        <item name="colorPrimaryVariant">@color/orange</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/orange</item>
@@ -21,10 +21,14 @@
         <item name="fontFamily">@font/poppinssemibold</item>
     </style>
 
-
     <style name="textStyleMedium">
         <item name="android:textColor">@color/black</item>
         <item name="fontFamily">@font/poppinsmedium</item>
+    </style>
+
+    <style name="buttonTextStyle">
+        <item name="android:textColor">@color/white</item>
+        <item name="fontFamily">@font/poppinssemibold</item>
     </style>
 
 
