--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,13 +9,19 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="0dp"
+        android:padding="10dp"
         android:layout_height="wrap_content"
+        app:itemIconTint="@drawable/custom_bottom_navbar"
+        app:itemTextColor="@drawable/custom_bottom_navbar"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
-        android:background="?android:attr/windowBackground"
+        android:background="@color/black"
+        app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:itemTextAppearanceActive="@style/BottomNavigationLabelStyle"
+        app:itemTextAppearanceInactive="@style/BottomNavigationLabelStyle"
         app:menu="@menu/bottom_nav_menu" />
 
     <fragment
