--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,22 +6,40 @@
     android:layout_height="match_parent"
     tools:context=".ui.MainActivity">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="20dp"
+        android:contentDescription="@string/add_routines"
+        android:src="@drawable/ic_add_24"
+        android:tint="@android:color/white"
+        app:backgroundTint="@color/orange"
+        app:fabCustomSize="64dp"
+        app:fabSize="auto"
+        app:layout_constraintBottom_toTopOf="@+id/nav_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:maxImageSize="36dp" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="0dp"
-        android:padding="10dp"
         android:layout_height="wrap_content"
-        app:itemIconTint="@drawable/custom_bottom_navbar"
-        app:itemTextColor="@drawable/custom_bottom_navbar"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
         android:background="@color/black"
+        android:padding="10dp"
+        app:itemIconTint="@drawable/custom_bottom_navbar"
+        app:itemTextAppearanceActive="@style/BottomNavigationLabelStyle"
+        app:itemTextAppearanceInactive="@style/BottomNavigationLabelStyle"
+        app:itemTextColor="@drawable/custom_bottom_navbar"
         app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:itemTextAppearanceActive="@style/BottomNavigationLabelStyle"
-        app:itemTextAppearanceInactive="@style/BottomNavigationLabelStyle"
         app:menu="@menu/bottom_nav_menu" />
 
     <fragment
