add: fragments for all pages :rocket:

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -35,5 +35,14 @@
         <item name="android:textSize">10sp</item>
     </style>
 
+    <style name="Theme.Moru.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.Moru.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.Moru.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 
 </resources>
