--- a/app/src/main/res/drawable/custom_pick_routince_card.xml
+++ b/app/src/main/res/drawable/custom_pick_routince_card.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <corners android:radius="6dp"/>
+    <stroke android:color="@color/light_grey"/>
 
-</selector>
+
+</shape>
