add: pick routine layout :rocket:

--- a/app/src/main/res/layout/activity_pick_schedule.xml
+++ b/app/src/main/res/layout/activity_pick_schedule.xml
@@ -4,12 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.add_routine.AddRoutineActivity">
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/placeholder"
-        android:background="@color/white"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    tools:context=".ui.add_routine.pick_schedule.PickScheduleActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
