--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -31,6 +31,12 @@
         <item name="fontFamily">@font/poppinssemibold</item>
     </style>
 
+    <style name="tabTextStyle">
+
+        <item name="fontFamily">@font/poppinsmedium</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
     <style name="BottomNavigationLabelStyle" parent="@style/TextAppearance.AppCompat">
         <item name="android:textSize">10sp</item>
     </style>
