--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,9 +16,9 @@
         android:layout_marginBottom="20dp"
         android:contentDescription="@string/add_routines"
         android:src="@drawable/ic_add_24"
-        android:tint="@android:color/white"
+        app:tint="@android:color/white"
         app:backgroundTint="@color/orange"
-        app:fabCustomSize="64dp"
+        app:fabCustomSize="72dp"
         app:fabSize="auto"
         app:layout_constraintBottom_toTopOf="@+id/nav_view"
         app:layout_constraintEnd_toEndOf="parent"
