fix: style edit text and button :hammer:

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,6 +41,7 @@
         android:background="@drawable/custom_text_field_bg"
         android:drawableStart="@drawable/custom_email_icon"
         android:drawablePadding="12dp"
+        android:textSize="14sp"
         android:ems="10"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
@@ -61,6 +62,7 @@
         android:background="@drawable/custom_text_field_bg"
         android:drawableStart="@drawable/custom_pass_icon"
         android:drawablePadding="12dp"
+        android:textSize="14sp"
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword"
@@ -81,7 +83,7 @@
         android:layout_marginTop="60dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="60dp"
-        android:padding="8dp"
+        android:padding="6dp"
         android:text="@string/login"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/container_register"
