--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -41,6 +41,7 @@
         android:background="@drawable/custom_text_field_bg"
         android:drawableStart="@drawable/custom_email_icon"
         android:drawablePadding="12dp"
+        android:textSize="14sp"
         android:ems="10"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
@@ -62,6 +63,7 @@
         android:drawableStart="@drawable/custom_pass_icon"
         android:drawablePadding="12dp"
         android:ems="10"
+        android:textSize="14sp"
         android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="16dp"
@@ -82,6 +84,7 @@
         android:drawableStart="@drawable/custom_pass_icon"
         android:drawablePadding="12dp"
         android:ems="10"
+        android:textSize="14sp"
         android:hint="@string/confirm_pass"
         android:inputType="textPassword"
         android:padding="16dp"
@@ -101,7 +104,7 @@
         android:layout_marginBottom="60dp"
         android:background="@drawable/custom_rounded_btn_bg"
         android:elevation="0dp"
-        android:padding="8dp"
+        android:padding="6dp"
         android:text="@string/register"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/container_login"
