--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="2dp"
         android:text="@string/user"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,9 +34,10 @@
 
     <ImageView
         android:id="@+id/iv_wave_hand"
-        android:layout_width="18dp"
-        android:layout_height="20dp"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
         android:layout_marginStart="4dp"
+        android:layout_marginBottom="4dp"
         android:contentDescription="@string/waving_hand"
         android:src="@drawable/hand"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
