fix: style and layout :hammer:

--- a/app/src/main/res/layout/activity_fill_profile.xml
+++ b/app/src/main/res/layout/activity_fill_profile.xml
@@ -25,8 +25,8 @@
         android:layout_height="85dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
-        android:text="Fill Your Personal Data"
-        android:textSize="31sp"
+        android:text="@string/fill_your_personal_data"
+        android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/back_button" />
 
@@ -34,12 +34,12 @@
         android:id="@+id/iv_profile"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginStart="154dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="32dp"
+        android:contentDescription="@string/image_profile"
         android:src="@drawable/placeholder_profile_user"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fillyour"
-        android:contentDescription="@string/image_profile" />
+        app:layout_constraintTop_toBottomOf="@+id/fillyour" />
 
     <EditText
         android:id="@+id/name"
@@ -47,33 +47,36 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/custom_text_field_bg"
         android:drawablePadding="12dp"
         android:ems="10"
-        android:hint="Name"
+        android:hint="@string/name"
         android:inputType="text"
         android:padding="16dp"
         android:textColorHint="@color/grey"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fillyour" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_profile" />
 
     <EditText
+        android:drawableEnd="@drawable/custom_calendar_icon"
         android:id="@+id/birth"
         style="@style/textStyleMedium"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/custom_text_field_bg"
         android:drawablePadding="12dp"
         android:ems="10"
-        android:hint="Date of Birth"
+        android:hint="@string/date_of_birth"
         android:inputType="text"
         android:padding="16dp"
+        android:textSize="14sp"
         android:textColorHint="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,12 +88,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/custom_text_field_bg"
         android:drawablePadding="12dp"
+        android:textSize="14sp"
         android:ems="10"
-        android:hint="Describe Your Goals"
+        android:hint="@string/describe_your_goals"
         android:inputType="text"
         android:padding="16dp"
         android:textColorHint="@color/grey"
@@ -99,21 +103,20 @@
         app:layout_constraintTop_toBottomOf="@+id/birth" />
 
     <Button
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_next"
         style="@style/buttonTextStyle"
-        android:background="@drawable/custom_rounded_btn_bg"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:elevation="0dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="60dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="60dp"
-        android:padding="8dp"
-        android:text="next"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/custom_rounded_btn_bg"
+        android:elevation="0dp"
+        android:padding="6dp"
+        android:text="@string/next"
         android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/descgoals" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
